<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- AG: User Name -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <!-- AG: Skin type -->
    <ListPreference
        android:id="@+id/skin_types"
        android:defaultValue="1"
        android:entries="@array/list_skin_types"
        android:entryValues="@array/MEDs_by_skin_type"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary=""
        android:title="@string/skin_types" />

    <!-- AG: Sunscreen -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_sunscreen_switch"
        android:title="@string/pref_title_sunscreen_switch" />

    <Preference
        android:summary="The information published in this app is not intended to take the place of medical advice. Please seek advice from a qualified dermatologist." />

</PreferenceScreen>